--- a/tss.yaml
+++ b/tss.yaml
@@ -1,5 +1,5 @@
 command:
-  name: spring-mysql-jpa
+  name: new
   description: Create a new project using Spring, JPA, and MySQL
   options:
     - name: wavefront
