Add support for optional test container Test Case

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,27 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<!-- TO EVENTUALLY FILTER BASED ON GENERATOR OPTIONS -->
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>testcontainers</artifactId>
+			<version>1.15.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>1.15.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testcontainers</groupId>
+			<artifactId>mysql</artifactId>
+			<version>1.15.1</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
