change ot use installfromroo

--- a/.generators/spring-mysql/new/generator.yaml
+++ b/.generators/spring-mysql/new/generator.yaml
@@ -8,7 +8,7 @@ command:
       inputType: toggle
 
 sources:
-  baseDirectory: "../../../"
+  installFromRoot: true
   include:
     - name: everything
       condition: true
