--- a/.generators/spring-mysql-jpa/new/generator.yaml
+++ b/.generators/spring-mysql-jpa/new/generator.yaml
@@ -2,7 +2,7 @@ command:
   name: new
   description: Create a new project using Spring, JPA, and MySQL
   options:
-    - name: use-test-containers
+    - name: useTestContainers
       description: Add Unit Test using Test Containers
       dataType: boolean
       defaultValue: true
